esl-resilience/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esl-resilience
  labels:
    name: esl-resilience
    app: esl-resilience
